el formulario ya envia al correo

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                           <div class="col-md-3">
                             
                             <div class="form-group">
-                                <label for="form_name">Fecha *</label>
+                                <label for="form_fechareclamo">Fecha *</label>
                                 <!--<input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">-->
-                                <input id="datepicker" width="276" placeholder="Ingresa una fecha de la queja" required="required" data-error="La fecha es requerida."/>
+                                <input id="form_fechareclamo" name="fechareclamo" width="276" placeholder="Ingresa una fecha de la queja" required="required" data-error="La fecha es requerida."/>
                                 <div class="help-block with-errors"></div>
                             </div>
                           </div>
@@ -92,7 +92,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="form_lastname">Apellidos</label>
-                                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Ingresa tu apellido *" required="required" data-error="El apellido es obligatorio.">
+                                    <input id="form_lastname" type="text" name="apellidos" class="form-control" placeholder="Ingresa tu apellido *" required="required" data-error="El apellido es obligatorio.">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
